--- a/main.css
+++ b/main.css
@@ -7,6 +7,11 @@ a {
 }
 #header {
 	background-color: #404040;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 70px;
 }
 #main {
 	background-color: #808080;
