--- a/main.css
+++ b/main.css
@@ -1,24 +1,69 @@
 body {
 	margin: 0 auto;
 	background-color: #202020;
+	align-items: center;
+	display: flex;
+	flex-direction: column;
 }
 a {
 	text-decoration: none;
 }
 #header {
 	background-color: #404040;
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
 	height: 70px;
+	width: 100%;
+	top: 0;
+	position: fixed;
+	z-index: 1;
 }
-#main {
-	background-color: #808080;
+#sel {
+	background-color: #660000;
+	height: 3000px;
+	width: 1100px;
+	top: 80px;
+	margin-top: 5px;
+	margin-bottom: 85px;
+	position: relative;
+	display: flex;
+	align-items: stretch;
 }
 #contacts {
 	background-color: #b0b0b0;
+	height: 50px;
+	width: 70%;
+	position: relative;
 }
 #footer {
 	background-color: #f0f0f0;
+	bottom: 0;
+	height: 35px;
+	width: 90%;
+	position: relative;
+}
+#menu {
+	background-color: #000090;
+	width: 200px;
+	left: 0;
+	position: relative;
+	font-size: 25px;
+	color: #ffffff;
+}
+#case {
+	background-color: #009000;
+	right: 0;
+	position: relative;
+	font-size: 25px;
+	flex: 1 0;
+
+}
+.list {
+	list-style-type : none;
+	font-size: 15px;
+	line-height: 1em;
+}
+.phone {
+	height: 40px;
+
+	background-color: red;
+	text-align: right;
 }
